# reaction-heat-calculator

./: .gitignore  CLAUDE.md  COWORK_BRIEF.md  DEPLOY.md  HANDOFF_STATUS.md  PRICING_DECISION.md  PRICING_STRATEGY.md  PWA_AUDIT.md  STORE_LISTING.md  STORE_LISTING.review.md  STORE_SUBMISSION.md  _headers  _redirects  build.sh  index.html  manifest.json  service-worker.js
ts_calculator/: main.py  pyproject.toml
ts_calculator/adapters/: __init__.py  adapter_registry.py  base.py
ts_calculator/adapters/psi4/: __init__.py  adapter.py  input_writer.py  output_parser.py
ts_calculator/adapters/pyscf/: __init__.py  adapter.py  output_parser.py
ts_calculator/adapters/xtb/: __init__.py  adapter.py  input_writer.py  output_parser.py
ts_calculator/app/: __init__.py  calculation_worker.py  job_manager.py  workflow_orchestrator.py  workflow_session.py
ts_calculator/config/: default_config.toml
ts_calculator/domain/: __init__.py
ts_calculator/domain/models/: __init__.py  calculation_result.py  molecule.py  reaction_system.py
ts_calculator/domain/presets/: __init__.py  organic_presets.toml  preset_library.py  transition_metal_presets.toml
ts_calculator/domain/validators/: __init__.py  ts_validator.py
ts_calculator/gui/: main_window.py
ts_calculator/gui/resources/: 3dmol_editor.html  3dmol_viewer.html
ts_calculator/gui/widgets/: job_monitor.py  (+6 more)
ts_calculator/infrastructure/: __init__.py  app_config.py  molfile_converter.py  process_runner.py  session_serializer.py  structure_file_io.py  workspace_manager.py
ts_calculator/test_data/: product.xyz  reactant.xyz
(+47 files in other folders)
