[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "ts-calculator"
version = "0.1.0"
description = "In-house transition state calculation GUI tool"
requires-python = ">=3.11"
dependencies = [
    "PyQt6>=6.6",
    "PyQt6-WebEngine>=6.6",
    "pyscf>=2.4",
    "matplotlib>=3.8",
    "tomli>=2.0 ; python_version < '3.11'",
    "tomli-w>=1.0",
    "rdkit>=2023.9",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-qt"]

[project.scripts]
ts-calculator = "main:main"

[tool.setuptools.packages.find]
where = ["."]
